插件修改为通过ClassName 做为KEY